--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Магазинчик</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Shop</title>
 </head>
 <body>
     <div>
         <h1>Онлайн магазин</h1>
-        <img src="https://www.flaticon.com/free-icon/picture_12632848">
+        <img src="https://cdn-icons-png.flaticon.com/512/14018/14018963.png">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ipsum magni, molestias.</p>
         <button id="buy">Купить</button>
     </div>
