--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <div>
         <h1>Онлайн магазин</h1>
         <img src="https://cdn-icons-png.flaticon.com/512/14018/14018963.png">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ipsum magni, molestias.</p>
-        <button id="buy">Купить</button>
+        <p>Сонечка моя роднулька</p>
+        <button id="buy">Цмокать</button>
     </div>
     <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
 </body>
