--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
     <div>
-        <h1>Онлайн магазин</h1>
+        <h1>Признание в любви</h1>
         <img src="https://cdn-icons-png.flaticon.com/512/14018/14018963.png">
         <p>Сонечка моя роднулька</p>
         <button id="buy">Цмокать</button>
