--- a/index.html
+++ b/index.html
@@ -56,14 +56,32 @@
             background: var(--tg-theme-secondary-bg-color);
         }
 
+        #form {
+            display: none;
+            text-align: center;
+        }
+
+        input {
+            width: 90%;
+            outline: none;
+            margin: 10px 5%;
+            padding: 15px 10px;
+            font-size: 14px;
+            border: 2px solid silver;
+            border-radius: 5px;
+        }
+
+        input:focus {
+            border-color: #db5d5d
+        }
     </style>
 </head>
 <body>
     <div>
-        <h1>Признание в любви</h1>
+        <h1>Онлайн Магазин</h1>
         <img src="https://cdn-icons-png.flaticon.com/512/14018/14018963.png">
-        <p>Сонечка моя роднулька</p>
-        <button id="buy">Цмокать</button>
+        <p>Покупай давай</p>
+        <button id="buy">ОПЛАТА</button>
     </div>
     <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
 </body>
